--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:vsoft-lab/HubTaxi-Server.git"
+    "url": "git@github.com:jerrykid/Taxi-Server.git"
   },
   "author": "NgaNguyenDuy",
   "dependencies": {
